# rules_bun

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  PLAN_NEXTJS.md  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel-bin  bazel-out  bazel-rules_bun  bazel-testlogs  renovate.json
.github/workflows/: ci.yml  release.yml
bun/: BUILD.bazel  bun.bzl  repositories.bzl  toolchain.bzl  toolchain_type.bzl
bun/internal/: BUILD.bazel  bun_binary.bzl  bun_build.bzl  bun_bundle.bzl  bun_install.bzl  bun_test.bzl  bun_toolchain.bzl
examples/binary/: BUILD.bazel  main.js
examples/bundle/: BUILD.bazel
examples/bundle/src/: app.js
examples/complex/: BUILD.bazel
examples/complex/src/: greet.js  main.js  math.js  math.test.js
examples/install/: BUILD.bazel  package.json
examples/test/: BUILD.bazel  calculator.test.js
tests/: BUILD.bazel
tests/integration/: BUILD.bazel
tests/integration/cross_platform/: BUILD.bazel
tests/integration/workflows/: BUILD.bazel
tests/unit/: BUILD.bazel  bun_binary_test.bzl  bun_build_test.bzl  bun_bundle_test.bzl  bun_install_test.bzl  bun_test_test.bzl  bun_toolchain_test.bzl
toolchains/: BUILD.bazel  bun_toolchain.bzl
